--- a/client/package.json
+++ b/client/package.json
@@ -14,9 +14,11 @@
     "papaparse": "^5.3.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.4.0",
+    "react-date-picker": "^8.4.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^5.0.1",
+    "react-searchable-dropdown": "^2.0.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
