--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express": "^4.18.1",
     "express-fileupload": "^1.4.0",
     "express-validator": "^6.14.2",
-    "pg": "^8.7.3"
+    "pg": "^8.7.3",
+    "react-datepicker": "^4.8.0"
   }
 }
