--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.2.0",
+    "jwt-decode": "^3.1.2",
     "papaparse": "^5.3.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.4.0",
