--- a/client/package.json
+++ b/client/package.json
@@ -15,7 +15,7 @@
     "papaparse": "^5.3.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.4.0",
-    "react-date-picker": "^8.4.0",
+    "react-date-picker": "8.4.0",
     "react-datepicker": "^4.8.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^5.2.0",
