--- a/client/package.json
+++ b/client/package.json
@@ -15,9 +15,11 @@
     "papaparse": "^5.3.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.4.0",
+    "react-custom-date-picker": "^1.2.1",
     "react-date-picker": "^8.4.0",
     "react-datepicker": "^4.8.0",
     "react-dom": "^18.2.0",
+    "react-modern-calendar-datepicker": "^3.1.6",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^5.0.1",
     "react-searchable-dropdown": "^2.0.3",
