--- a/client/package.json
+++ b/client/package.json
@@ -16,8 +16,7 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.4.0",
 
-    "react-custom-date-picker": "^1.2.1",
-    "react-date-picker": "^8.4.0",
+    "react-date-picker": "8.4.0",
 
     "react-datepicker": "^4.8.0",
     "react-dom": "^18.2.0",
