--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express-validator": "^6.14.2",
     "jsonwebtoken": "^8.5.1",
     "jwt-decode": "^3.1.2",
+    "nodemailer": "^6.7.8",
     "pg": "^8.7.3",
     "react-datepicker": "^4.8.0"
   }
