--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "jwt-decode": "^3.1.2",
     "nodemailer": "^6.7.8",
     "pg": "^8.7.3",
-    "react-datepicker": "^4.8.0"
+    "react-datepicker": "^4.8.0",
+    "uuid": "^8.3.2"
   }
 }
