--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "jsonwebtoken": "^8.5.1",
     "jwt-decode": "^3.1.2",
     "nodemailer": "^6.7.8",
+    "pdfkit": "^0.13.0",
     "pg": "^8.7.3",
     "react-datepicker": "^4.8.0",
     "uuid": "^8.3.2"
